Only show delete button for themes that were manually or through KNS installed

Rather than just hardcoding breeze, we check if the theme was installed using the sddmthemeinstaller.
In case that was done, we have an entry in the config file with the file path.

BUG: 454874


(cherry picked from commit 803a5d8b160e1e6201f9ba90b0fd17ed5b9bd5b3)